# Student_Management_System

./: CMakeLists.txt  toContributor.md
.github/workflows/: Notify_Branch_Creation_Deletion.yml
CourseSelection/: CMakeLists.txt  main.cpp
CourseSelection/DataBase/: CMakeLists.txt  CourseBroker.cppm  DataBroker.cppm  StudentBroker.cppm  TeacherBroker.cppm  TeachingTaskBroker.cppm  cmake_install.cmake
CourseSelection/DataBase/lib/: libDataBaseLib.so.1  libDataBaseLib.so.1.0.0
CourseSelection/Domain/: CMakeLists.txt  cmake_install.cmake
CourseSelection/Domain/lib/: libDomain.so.1  libDomain.so.1.0.0
CourseSelection/UiAndLogic/: CMakeLists.txt  cmake_install.cmake  coursecontroller.cppm  gradecontroller.cppm  inputhelper.cppm  main.cpp  maincontroller.cppm  registrar.cppm  secretarycontroller.cppm  studentcontroller.cppm  tableformatter.cppm  terminalui.cppm
CourseSelection/UiAndLogic/lib/: libCourseSelectionLib.so.1  libCourseSelectionLib.so.1.0.0
DataBase/: CMakeLists.txt  CourseBroker.cppm  TeacherBroker.cppm  TeachingTaskBroker.cppm
Domain/: CMakeLists.txt
UiAndLogic/: CMakeLists.txt  coursecontroller.cppm  datatype.cppm  gradecontroller.cppm  inputhelper.cppm  maincontroller.cppm  secretarycontroller.cppm  studentcontroller.cppm  tableformatter.cppm  teachercontroller.cppm  terminalui.cppm
doc/: devMode.md
doc/domain_layer/: 领域层接口文档.docx
doc/ui&applicationlogic_layer/: 表现层与应用逻辑层接口文档.odt  表现层和应用逻辑层.vpp  表现层和应用逻辑层设计文档.odt
domain/: CMakeLists.txt
